// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sale event search arenda 1`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "Бесплатно оформим страховку на случай, если жилец что-то сломает или внезапно съедет",
  "endDate": "2022-02-01T21:00:00+03:00",
  "name": "🔔 Страховка квартиры",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;

exports[`sale event search arenda 2`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "Будем отправлять деньги на карту в день платежа, даже если жилец задержит оплату",
  "endDate": "2022-02-01T21:00:00+03:00",
  "name": "🔔 Переведём деньги, даже если жилец не заплатит",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;

exports[`sale event search arenda 3`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "Найдём и проверим жильцов",
  "endDate": "2022-02-01T21:00:00+03:00",
  "name": "🔔 Проверяем жильцов",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;
